--- a/css/signup.css
+++ b/css/signup.css
@@ -2,7 +2,7 @@
 {
     padding: 0;
     margin: 0;
-    font-family:Arial, Helvetica, sans-serif
+    font-family:Arial, Helvetica, sans-serif;
 }
 
 body
@@ -17,12 +17,12 @@ body
     background-size: cover
 }
 
-body::before
+/* body::before
 {
     content: "";
     position: absolute; z-index: 1;
     top: 0; left: 0; right: 0; bottom: 0;
-}
+} */
 
 .top-header
 {
@@ -71,6 +71,7 @@ h1
 {
     display: block;
     padding: 20px;
+    padding-bottom: 10px;
     font-size: 65px; color: #fff;
     text-align: center;
 }
@@ -105,7 +106,15 @@ h1
 
 input::placeholder
 {
-    color: rgb(223, 223, 223);
+    color: #fff;
+    opacity: 0.7;
+}
+
+/* 2022.02.26 add hover effect */
+.input-box:hover
+{
+    cursor: pointer;
+    border: 4px solid #83e24c;
 }
 
 /* 2022.02.23 add focus */
@@ -148,7 +157,7 @@ form div .checkbox
 {
     width: 70%;
     font-size: 20px;
-    background-color: cornflowerblue;
+    background-color: #0066ff;
     border: none;
     border-radius: 15px;
     cursor: pointer;
