--- a/css/signup.css
+++ b/css/signup.css
@@ -29,10 +29,11 @@ body
 {
     width: 100%;
     height: 58px;
-    z-index: 2;
+    margin-bottom: 25px;
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
+    background-color: #fff;
     /* background-color: rgba(0, 0, 0, .8); */
 }
 
@@ -55,8 +56,8 @@ body
 /* 22.02.23 class name signup-box --> main-box */
 body .main-container
 {
-    z-index: 2;
-    margin-top: auto;
+    width: 400px;
+    height: 500px;
     margin-bottom: auto;
     padding: 20px;
     display: flex;
@@ -71,7 +72,7 @@ body .main-container
 h1
 {
     display: block;
-    padding: 20px;
+    padding: 10px;
     padding-bottom: 10px;
     font-size: 65px; color: #fff;
     text-align: center;
@@ -80,6 +81,7 @@ h1
 .input-signup-box
 {
     width: 100%;
+    margin: 2px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -99,7 +101,7 @@ h1
     border: 3px solid rgb(179, 179, 179);
     border-radius: 15px;
     font-size: 16px; color: #fff;
-    padding: 15px;
+    padding: 10px;
     margin: 10px;
     transition: 0.25s;
     box-sizing: border-box;
@@ -122,7 +124,7 @@ input::placeholder
 .input-box:focus
 {
     width: 85%;
-    font-size: 23px;
+    font-size: 21px;
     border: 6px solid rgb(198, 211, 84);
 }
 
@@ -150,7 +152,7 @@ form div .checkbox
 .submit-box
 {
     margin-top: 20px; 
-    margin-bottom: 20px;
+    margin-bottom: 5px;
     padding: 10px;
 }
 
